--- a/src/components/Elements/MainModal/scss/index.scss
+++ b/src/components/Elements/MainModal/scss/index.scss
@@ -31,7 +31,7 @@
   transition-timing-function: ease-in;
   border-radius: map.get($modal, 'border-radius');
   user-select: none;
-  overflow-y: auto;
+  overflow: hidden;
   transform: scale(0);
   transition: all 0.3s cubic-bezier(0.47, 1.64, 0.41, 0.8);
 
