--- a/src/components/Elements/MainModal/scss/modules/_topBar.scss
+++ b/src/components/Elements/MainModal/scss/modules/_topBar.scss
@@ -1,20 +1,18 @@
 @use 'scss/variables' as *;
 
 .modalTopBar {
-  position: sticky;
-  top: 0;
-  z-index: 10;
+  position: relative;
+  flex-shrink: 0;
+  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1.5rem 1.5rem;
   // width: 100%;
-  
-  @include themed {
-    background: t($modal);
-  }
-  
-  backdrop-filter: blur(10px);
+
+  background-color: rgba(1, 1, 1, 0.9);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  backdrop-filter: blur(16px) saturate(180%);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 
   .topBarLeft {
