--- a/src/components/Elements/MainModal/scss/settings/modules/_material-ui.scss
+++ b/src/components/Elements/MainModal/scss/settings/modules/_material-ui.scss
@@ -47,6 +47,10 @@ legend {
   margin-top: 10px !important;
 }
 
+.settingsRow .action .MuiFormControlLabel-root {
+  margin-top: 10px !important;
+}
+
 .checkbox svg {
   @include themed {
     fill: t($color) !important;
