fix(Tabs, styles): adjust padding and margin for improved layout in modal components

--- a/src/components/Elements/MainModal/scss/modules/_sidebar.scss
+++ b/src/components/Elements/MainModal/scss/modules/_sidebar.scss
@@ -4,8 +4,9 @@
   @include themed {
     position: relative;
     margin: 0;
-    padding: 0.5rem 5px 3rem 5px;
-    // background: t($modal-sidebar);
+    // padding: 1rem 1.5rem 4rem 1.5rem;
+    padding: 0.5rem 0 0 0.5rem;
+    background: t($modal-sidebar);
     border-radius: 12px 0 0 12px;
     overflow-y: auto;
     overflow-x: hidden;
