--- a/src/components/Elements/MainModal/scss/modules/_modalTabContent.scss
+++ b/src/components/Elements/MainModal/scss/modules/_modalTabContent.scss
@@ -8,7 +8,7 @@
   } */
 
   @include themed {
-    padding: 1rem 3rem 4rem;
+    padding: 1rem 2rem 4rem;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -16,7 +16,7 @@
     overflow-y: auto;
     background: t($modal-background);
 
-    margin: 0 1rem;
+    margin: 0;
     border-radius: t($borderRadius);
 
     @extend %tabText;
