--- a/src/components/Elements/MainModal/scss/modules/_sidebar.scss
+++ b/src/components/Elements/MainModal/scss/modules/_sidebar.scss
@@ -74,3 +74,54 @@
   margin-left: 0 !important;
   margin-right: 0 !important;
 }
+
+// Sidebar skeleton loader
+.sidebarSkeleton {
+  padding: 0.5rem 0.2rem;
+
+  .skeletonItem {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+    margin: 0.2rem;
+    pointer-events: none;
+
+    .iconPlaceholder {
+      width: 17px;
+      height: 17px;
+      border-radius: 6px;
+      margin-left: 20px;
+      margin-right: 20px;
+      flex-shrink: 0;
+
+      @include themed {
+        background: t($modal-sidebarActive);
+      }
+    }
+
+    .textPlaceholder {
+      height: 18px;
+      border-radius: 6px;
+
+      @include themed {
+        background: t($modal-sidebarActive);
+      }
+    }
+  }
+
+  .skeletonDivider {
+    @include themed {
+      height: 1px;
+      background: linear-gradient(
+        90deg,
+        transparent 0%,
+        t($modal-sidebarActive) 20%,
+        t($modal-sidebarActive) 80%,
+        transparent 100%
+      );
+      margin: 0.5rem 1.75rem;
+      border: none;
+      opacity: 0.6;
+    }
+  }
+}
