--- a/src/components/Elements/MainModal/scss/modules/_topBar.scss
+++ b/src/components/Elements/MainModal/scss/modules/_topBar.scss
@@ -10,10 +10,13 @@
   padding: 1.5rem 1.5rem;
   // width: 100%;
 
-  background-color: rgba(1, 1, 1, 0.9);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   backdrop-filter: blur(16px) saturate(180%);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+
+  @include themed {
+    background-color: t($modal-background);
+    border-bottom: 1px solid t($modal-sidebarActive);
+  }
 
   .topBarLeft {
     display: flex;
