feat(Quote): enhance user select properties for improved text interaction

--- a/src/features/quote/scss/index.scss
+++ b/src/features/quote/scss/index.scss
@@ -5,6 +5,7 @@
   font-size: 0.8em;
   text-shadow: 0 0 10px rgb(0 0 0 / 30%);
   cursor: initial;
+  -webkit-user-select: none;
   user-select: none;
 
   --shadow-shift: 0.125rem;
@@ -12,11 +13,15 @@
   color: #fff;
   font-weight: 600;
   max-width: 45vw;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .quoteauthor {
   font-size: 0.9em;
   letter-spacing: 0.5px;
+  -webkit-user-select: none;
   user-select: none;
 
   --shadow-shift: 0.125rem;
@@ -35,6 +40,7 @@ h1.quoteauthor {
 .quoteAuthorLink {
   text-decoration: none;
   color: white;
+  -webkit-user-select: none;
   user-select: none;
 }
 
