style: make colours more like site

--- a/src/components/Elements/MainModal/scss/settings/modules/_material-ui.scss
+++ b/src/components/Elements/MainModal/scss/settings/modules/_material-ui.scss
@@ -162,6 +162,12 @@ legend,
   .MuiFormControlLabel-root {
     width: 100%;
   }
+
+  p {
+    @include themed {
+      color: t($subColor) !important;
+    }
+  }
 }
 
 .css-w66kx-MuiChip-root {
