--- a/src/components/Elements/MainModal/scss/settings/modules/tabs/_order.scss
+++ b/src/components/Elements/MainModal/scss/settings/modules/tabs/_order.scss
@@ -46,7 +46,7 @@
 
 .images-row {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   padding: 20px;
   grid-gap: 20px;
 
